# mail-autodiscover-autoconfig

./: .dockerignore  .env.dist  .gitignore  Cargo.toml  Makefile  README.md
.github/: FUNDING.yml
.github/workflows/: dev-publish.yml  publish.yml  rust.yml  validate.yml
alpine/: Dockerfile
docker/: Dockerfile
src/: build.rs  host_header.rs  main.rs  resources.rs  ressources.rs  routes.rs  util.rs
src/resources/: AppleResponse.rs  Version.rs
src/ressource/: DnsTxtResponse.rs
src/ressources/: AutoDiscoverJson.rs  AutoDiscoverXml.rs  Version.rs
src/routes/: autoconfig.rs  dns.rs  tech.rs
templates/: apple.html.tera  index.html.tera
templates/dns/: zone.txt.tera
templates/xml/: autodiscover-error.xml.tera  autodiscover-mobilesync.xml.tera  autodiscover.xml.tera  config-v1.1.xml.tera  email_mobileconfig.tera
xml/autodiscover/: AutodiscoverExchangeResponse.xml  AutodiscoverRequest.xml  AutodiscoverResponse.xml  AutodiscoverResponseError.xml  AutodiscoverResponseRedirect.xml
xml/mobilesync/: AutodiscoverRequest.xml
xml/xsd/autodiscover/: AutodiscoverExchangeResponse.xsd  AutodiscoverExchangeResponseRedirect.xsd  AutodiscoverRequest.xsd  AutodiscoverResponse.xsd  AutodiscoverResponseError.xsd  AutodiscoverResponseRedirect.xsd
xml/xsd/mobilesync/: AutodiscoverMobileSyncResponse.xsd  AutodiscoverRequest.xsd  AutodiscoverResponse.xsd
