[package]
name = "mail-autodiscover-autoconfig"
version = "1.5.0"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2021"
rust-version = "1.64"
build = "src/build.rs"

[features]
default = ["apple", "dns"]
apple = []
dns = []

[dependencies]
# ENV
dotenv = "0.15.0"

# Domain parsing
addr = "0.15.3"

# Webserver
rocket = { version = "0.5.0-rc.2", features = ["json"] }

# Serialization/Deserialization
serde_json = "1.0.64"
serde = "1.0.126"
serde_derive = "1.0.126"
serde-xml-rs = "0.5.1"

chrono = "0.4.19"

[dependencies.tera]
version = "1"
default-features = false

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dev-dependencies]
temp-env = "0.2.0"

[build-dependencies]
anyhow = "1.0.63"
vergen = { version = "7.4.2", default-features = false, features = ["build", "git", "rustc"] }
