[package]
name = "mail-autodiscover-autoconfig"
version = "1.6.1"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2021"
rust-version = "1.76"
build = "src/build.rs"

[features]
default = ["apple", "dns"]
apple = []
dns = []

[dependencies]
# ENV
dotenv = "0.15.0"

# Domain parsing
addr = "0.15.3"

# Webserver
rocket = { version = "0.5.0", features = ["json"] }

# Serialization/Deserialization
quick-xml = { version = "0.27.1", default-features = false, features = [ "serialize" ] }
serde_json = "1.0.64"
serde = { version = "1.0.153", default-features = false, features = [ "derive" ] }
chrono = "0.4.19"

[dependencies.tera]
version = "1"
default-features = false

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dev-dependencies]
temp-env = "0.3.1"

[build-dependencies]
anyhow = "1.0.63"
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc"] }
