[package]
name = "mail-autodiscover-autoconfig"
version = "1.6.1"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2021"
rust-version = "1.72"
build = "src/build.rs"

[badges]
github = { repository = "mail-autodiscover-autoconfig", branch = "main" }
#codecov = { repository = "mail-autodiscover-autoconfig", branch = "main", service = "github" }
is-it-maintained-issue-resolution = { repository = "mail-autodiscover-autoconfig" }
is-it-maintained-open-issues = { repository = "mail-autodiscover-autoconfig" }
maintenance = { status = "passively-maintained" }

[features]
default = ["apple", "dns"]
apple = []
dns = []

[dependencies]
# ENV
dotenv = "0.15.0"

# Domain parsing
addr = "0.15.3"

# Webserver
rocket = { version = "0.5.0", features = ["json"] }

# Serialization/Deserialization
quick-xml = { version = "0.31.0", default-features = false, features = [ "serialize" ] }
serde_json = "1.0.64"
serde = { version = "1.0.153", default-features = false, features = [ "derive" ] }
chrono = "0.4.34"

[dependencies.tera]
version = "1"
default-features = false

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

[dev-dependencies]
temp-env = "0.3.1"

[build-dependencies]
anyhow = "1.0.63"
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc"] }
